<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ponto"
            android:icon="@drawable/ic_swap_horiz_black_18dp"
            android:title="@string/registroPonto"
           />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_pedido"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/nav_consulta"
            android:icon="@drawable/places_ic_search"
            android:title="@string/consulta" />

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
