<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rafael.registropresenca.view.LoginActivity"  >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imgLogin"
                android:src="@drawable/ic_lock_black_48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCodigo"
                android:layout_below="@+id/imgLogin"
                android:hint="@string/hintCode"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCodigo"
                android:id="@+id/txtNome"
                android:hint="@string/hintName"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNome"
                android:id="@+id/btnEntrar"
                android:text="@string/btnEntrar"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:onClick="entrar"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnEntrar"
            android:id="@+id/btnCadastrar"
            android:text="@string/btnCadastrar"
            android:visibility="invisible"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="cadastrar"/>

</RelativeLayout>

</ScrollView>
